[package]
name = "interactive-exeunit"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-client = { git = "https://github.com/golemfactory/ya-client.git", rev = "50c530fb54fbb91a9ad743f43f2c6e0b3fc3b34f"}
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "50c530fb54fbb91a9ad743f43f2c6e0b3fc3b34f"}

#yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "event-api-compatibility" }
yarapi = { path = "../../Golem/yarapi", branch = "event-api-compatibility" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono = "0.4.10"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
indicatif = "0.15.0"
log = "0.4"
semver = "0.10.0"
serde = "1.0.117"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2.10", features = ["fs"] }
