[package]
name = "interactive-exeunit"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "progress-reporter",
    "prophecy-on-demand",
    "two-way-interaction"
]

[dependencies]
ya-client = "0.5"
ya-client-model = "0.3"

yarapi = "0.4"

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
bigdecimal = "0.1.0"
chrono = "0.4.10"
derive_more = "0.99.11"
dotenv = "0.15.0"
env_logger = "0.6"
futures = "0.3"
indicatif = "0.15.0"
log = "0.4"
semver = "0.10.0"
serde = "1.0.117"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2.10", features = ["fs"] }

[patch.crates-io]
yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "messaging-through-streaming" }
#ya-client = { git = "https://github.com/golemfactory/ya-client.git", branch = "release/v0.5"}
#ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", branch = "release/v0.5"}

