[package]
name = "progress-reporter"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interactive-exeunit = { path = "../"}

yarapi = { git = "https://github.com/golemfactory/yarapi", branch = "messaging-through-streaming" }

actix = "0.9"
actix-rt = "1.0"
anyhow = "1.0.28"
chrono = "0.4.10"
derive_more = "0.99.11"
env_logger = "0.6"
futures = "0.3"
log = "0.4"
parity-wordlist = "1.3.1"
serde = "1.0.117"
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2.10", features = ["fs"] }
